Instructions how to package with jlink